JBERET-443 newInstance() in java.lang.Class has been deprecated