@@ -1,5 +1,5 @@
 /*
- * Copyright (c) 2012-2016 Red Hat, Inc. and/or its affiliates.
+ * Copyright (c) 2012-2018 Red Hat, Inc. and/or its affiliates.
  *
  * This program and the accompanying materials are made
  * available under the terms of the Eclipse Public License 2.0
@@ -43,7 +43,7 @@ public final class ArtifactFactoryWrapper extends AbstractArtifactFactory {
         if (obj == null) {
             final Class<?> c = getClassFromBatchXmlOrClassLoader(ref, classLoader);
             if (c != null) {
-                obj = c.newInstance();
+                obj = c.getDeclaredConstructor().newInstance();
                 ArtifactCreationContext acc = ArtifactCreationContext.getCurrentArtifactCreationContext();
                 doInjection(obj, c, classLoader, acc.jobContext, acc.stepContext, acc.properties);
                 invokeAnnotatedLifecycleMethod(obj, c, PostConstruct.class);
